temporal fix: SubPanel's name div doesn't recognize height: 100% on Safari

--- a/src/sass/sub-panel.sass
+++ b/src/sass/sub-panel.sass
@@ -16,18 +16,19 @@
 
 .sub-panel
   background: white
-  display: flex
-  flex-direction: column
+  // display: flex
+  // flex-direction: column
   width: 48%
   margin: 0 .1em .5em
   padding: .4em
   box-shadow: 0 1px 2px rgba(0,0,0,0.07)
   text-decoration: none
   &__photo
+    height: 71%
   &__name
-    // align-self: center
+    align-self: center
     text-align: center
-    height: 100%
+    height: 29%
     display: flex
     align-items: center
     justify-content: center
